# Vault

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  NOTICE.md  PRD.md  README.md  RELEASING.md  REUSE.toml  clippy.toml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/vault-agent/: Cargo.toml
crates/vault-agent/src/: clipboard.rs  fingerprint.rs  harden.rs  main.rs  sealed.rs  server.rs  session.rs  state.rs  unlock.rs
crates/vault-api/: Cargo.toml
crates/vault-api/src/: client.rs  error.rs  identity.rs  lib.rs  pqc.rs  sync.rs  urls.rs
crates/vault-api/tests/: login_sync.rs  parsing.rs
crates/vault-cli/: Cargo.toml
crates/vault-cli/src/: config.rs  env_exec.rs  main.rs  spawn.rs
crates/vault-config/: Cargo.toml
crates/vault-config/src/: lib.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: cipher.rs  enc_string.rs  error.rs  export.rs  generate.rs  kdf.rs  lib.rs  login.rs  org_key.rs  totp.rs  wordlist.rs
crates/vault-core/tests/: cipher_encrypt.rs  generate.rs  round_trip.rs
crates/vault-core/tools/: gen_wordlist.sh
crates/vault-ipc/: Cargo.toml
crates/vault-ipc/src/: lib.rs  proto.rs  socket.rs  transport.rs
crates/vault-ipc/tests/: transport.rs
crates/vault-store/: Cargo.toml
crates/vault-store/src/: lib.rs
crates/vault-store/tests/: cache.rs
crates/vault-theme/: Cargo.toml
crates/vault-theme/src/: lib.rs
crates/vault-tui/: Cargo.toml
crates/vault-tui/src/: app.rs  client.rs  main.rs  osc52.rs  ui.rs
docs/: apikey.md  exec.md  fingerprint.md  fuzzing-report.md  fuzzing.md  m2-vaultwarden.md  pqc.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: enc_string_parse.rs
