# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vault-agent"
description = "Vault long-lived daemon — master-key custody, UDS server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "vault-agent"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
vault-core = { path = "../vault-core" }
vault-ipc = { path = "../vault-ipc" }
vault-store = { path = "../vault-store" }
