# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vault-agent"
description = "Vault long-lived daemon — master-key custody, UDS server"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "vault-agent"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
vault-core = { path = "../vault-core" }
vault-ipc = { path = "../vault-ipc" }
vault-store = { path = "../vault-store" }
vault-api = { path = "../vault-api" }

[dev-dependencies]
tempfile = { workspace = true }
