# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vault-agent"
description = "Vault long-lived daemon — master-key custody, UDS server"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "vault-agent"
path = "src/main.rs"

[lints]
workspace = true

[features]
# `clipboard` (default) pulls arboard so `Request::Copy` can place secrets on
# the system clipboard. A headless install can drop it with
# `--no-default-features` to shed the X11/Wayland dependency tree; copy then
# returns a clean "not compiled in" error.
default = ["clipboard"]
clipboard = ["dep:arboard"]
# Post-quantum transport (off by default): prefer X25519MLKEM768 on the HTTPS
# client. Passes through to vault-api; see `docs/pqc.md`.
pqc = ["vault-api/pqc"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
arboard = { workspace = true, optional = true }
# Process hardening: disable core dumps + ptrace at startup (safe rustix-backed
# API, keeps the crate's #![forbid(unsafe_code)]). See `harden.rs`.
secmem-proc = "0.3"
vault-core = { path = "../vault-core" }
vault-ipc = { path = "../vault-ipc" }
vault-store = { path = "../vault-store" }
vault-api = { path = "../vault-api" }

# Linux kernel session keyring — backs the opt-in `agent.session_keyring`
# session-resume feature. Pure Rust (no libkeyutils C dep). Linux-only.
[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
