# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vault-api"
description = "Bitwarden REST + identity client for Vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }
vault-core = { path = "../vault-core" }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
vault-store = { path = "../vault-store" }
