# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vault-cli"
description = "Vault command-line interface — Bitwarden client for the terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "vault"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = ["cli"]
cli = []

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
vault-core = { path = "../vault-core" }
vault-ipc = { path = "../vault-ipc" }
