# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vault-cli"
description = "Vault command-line interface — Bitwarden client for the terminal"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "vault"
path = "src/main.rs"
# The headless gate (PRD G6): `cargo install --path crates/vault-cli
# --no-default-features --features cli` is the supported server install;
# with no features at all there is nothing to build.
required-features = ["cli"]

[lints]
workspace = true

[features]
default = ["cli"]
cli = []

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
vault-config = { path = "../vault-config" }
vault-core = { path = "../vault-core" }
vault-ipc = { path = "../vault-ipc" }
vault-store = { path = "../vault-store" }
