# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vault-config"
description = "Vault user configuration — typed config.toml (account profile + tunables)"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
dirs = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
