# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vault-core"
description = "Vault crypto, vault model, KDF, and EncString parsing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
zeroize = { workspace = true }
