# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vault-ipc"
description = "Client ↔ agent CBOR protocol over a Unix domain socket"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
