# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vault-store"
description = "Local encrypted cache and sync state for Vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }
time = { workspace = true }
zeroize = { workspace = true }
tempfile = { workspace = true }
vault-core = { path = "../vault-core" }
